docs: update handoff with CTA changes

--- a/memory/handoff-2026-01-20-002.md
+++ b/memory/handoff-2026-01-20-002.md
@@ -41,8 +41,14 @@ Implementati logo SVG con switching dark/light, aggiunte nuvolette animate all'h
 - [ ] Setup dominio bonusimmobiliare.it
 - [ ] Privacy policy
 
+### CTA
+- Header CTA cambiata da "Esplora le Guide" a "Trova il Servizio" → /servizi/
+- Hero primary: "Trova il Servizio" → /servizi/
+- Hero secondary: "Esplora le Guide" → /blog/
+
 ## Commits sessione
 - `ea4e3b8`: fix: show both logo icon and text in header
 - `70e3163`: feat: add floating clouds animation to hero section
 - `46916fe`: fix: remove cloud fade-in animation to prevent flash
 - `38f80ab`: docs: update context.md with logo and cloud features
+- `92a01d7`: feat: change CTAs to 'Trova il Servizio' linking to slider
